Fixing up some things

--- a/public/index.html
+++ b/public/index.html
@@ -17,8 +17,10 @@
 			require(['main']);
 		</script>
 		<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
+		<link href='http://fonts.googleapis.com/css?family=Carme' rel='stylesheet' type='text/css'>
 		<style>
 			body { overflow:hidden; }
+			h1 { font-weight:normal; }
 
 			.border { border:1px solid #333; }
 
@@ -42,7 +44,7 @@
 			.stretch.center .box { display:inline-block; }
 			.stretch.center .box.border { border-top:0; }
 
-			.stretch.right { right:-300px; top:0; bottom:0; padding:0 20px; width:260px; background:#333; color:#fff; text-align:left;
+			.stretch.right { right:-300px; top:0; bottom:0; padding:0 20px; width:260px; background:#333; color:#fff; text-align:left; font-family: 'Carme', sans-serif;
 				-webkit-transition:right 400ms ease-out;
 				-moz-transition:right 400ms ease-out;
 				transition:right 400ms ease-out;
@@ -55,7 +57,7 @@
 			.infowindow-summit h1 { margin-left:135px; line-height:90px; vertical-align:middle; }
 			.infowindow-summit img { float:left; max-width:125px; min-height:90px; }
 
-			.ui-slider-horizontal { height:3px; background:#fff; border:0; }
+			.ui-slider-horizontal { margin-top:25px; height:3px; background:#fff; border:0; }
 			.ui-slider-horizontal .ui-slider-handle { top:-13px; width:25px; height:25px; border:3px solid #ccc; outline:none; border-radius:25px; background:#fff; }
 			.ui-slider-horizontal .ui-slider-handle .label { display:none; position:absolute; left:-60px; top:-40px; padding:10px; width:120px; text-decoration:none; font-size:12px; background:rgba(255, 255, 255, .9); white-space:nowrap; text-align:center; }
 
