Putting font on body

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
 		<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
 		<link href='http://fonts.googleapis.com/css?family=Carme' rel='stylesheet' type='text/css'>
 		<style>
-			body { overflow:hidden; }
+			body { overflow:hidden; font-family: 'Carme', sans-serif; }
 			h1 { font-weight:normal; }
 
 			.border { border:1px solid #333; }
@@ -44,7 +44,7 @@
 			.stretch.center .box { display:inline-block; }
 			.stretch.center .box.border { border-top:0; }
 
-			.stretch.right { right:-300px; top:0; bottom:0; padding:0 20px; width:260px; background:#333; color:#fff; text-align:left; font-family: 'Carme', sans-serif;
+			.stretch.right { right:-300px; top:0; bottom:0; padding:0 20px; width:260px; background:#333; color:#fff; text-align:left;
 				-webkit-transition:right 400ms ease-out;
 				-moz-transition:right 400ms ease-out;
 				transition:right 400ms ease-out;
